# game-rs

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix
examples/: main.rs  parenting_and_object_types.rs  simple_transformations.rs
examples/my-main/: camera_controller.rs  main.rs  player_movement.rs
src/: app.rs  buffer.rs  drawable.rs  lib.rs  logichooks.rs  main.rs  mesh_renderer.rs  object.rs  renderer.rs  scene_loader.rs  shader.wgsl  state.rs  transform.rs  world.rs
src/asset_management/: assetmanager.rs  bindgroup_layout_manager.rs  materialmanager.rs  mesh.rs  meshmanager.rs  mod.rs  shadermanager.rs  texturemanager.rs
src/components/: camera.rs  collider.rs  freecam.rs  gravity.rs  mod.rs  rigid_body.rs  rotate.rs  transform.rs
src/drawables/: drawable.rs  mesh_renderer.rs  mod.rs
src/hacks/: fat_ptr.rs  mod.rs
src/input/: input_manager.rs  mod.rs
src/physics/: simulator.rs
src/shaders/: fallback_shader3d.wgsl  fullscreen_passhthrough.wgsl  shader2d.wgsl  shader3d.wgsl
src/utils/: math.rs
testmodels/: parenting_and_object_types.fbx  simple_trans.fbx
testmodels/testmap/: testmap.blend  testmap.fbx
