[package]
name = "gamers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.4", features = ["vulkan-portability"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
winit = { version = "0.29.15", features = ["x11"] }
env_logger = { version = "0.11.3", features = ["auto-color"] }
bytemuck = "1.15.0"
log = "0.4.21"
cgmath = "0.18.0"
russimp = "3.2.0"
itertools = "0.13.0"
rand = { version = "0.9.0-alpha.1", features = [] }
image = "0.25.1"