[package]
name = "gamers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "22.0.0", features = ["vulkan-portability"] }
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
winit = { version = "0.30.4", features = ["x11"] }
env_logger = { version = "0.11.3", features = ["auto-color"] }
bytemuck = "1.16.1"
log = "0.4.22"
nalgebra = { version = "0.33.0" }
num-traits = "0.2.19"
russimp = "3.2.0"
itertools = "0.13.0"
rand = { version = "0.9.0-alpha.1", features = [] }
image = "0.25.1"
rapier3d = "0.22.0"
futures = "0.3.30"

[build-dependencies]
chrono = "0.4.38"